[build-system]
requires = ["hatchling"]
build-backend = "hatching.build"

[project]
name = "rekdoc"
dynamic = ["version"]
dependencies = ["python-docx",
             "pillow",
             "click",
             "mysql-connector-python"
]
authors = [
{name = "rek3000", email = "torek3k@example.com"}
]
description = "System health check toolkit"
requires-python = ">=3"
readme = "README.md"

[project.scripts]
rekdoc = "rekdoc.core:cli"

[project.optional-dependencies]
dev = ["hatchling",
    "pyink",
    "pyinstaller",

]
