[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.version]
path = "./rekdoc/"

[project]
name = "rekdoc"
version = "1.0.0"
# dynamic = ["version"]
dependencies = ["python-docx",
             "pillow",
             "click",
             "mysql-connector-python",
             "python-dotenv",
             "rekdoc",
]
authors = [
{name = "rek3000", email = "torek3k@example.com"}
]
description = "System health check toolkit"
requires-python = ">=3"
readme = "README.md"

[project.scripts]
rd = "rekdoc.core:cli"

[project.optional-dependencies]
dev = ["hatch",
    "hatchling",
    "pyink",
    "pyinstaller",

]

